# SPDX-FileCopyrightText: Blair Bonnett
# SPDX-License-Identifier: 0BSD

[project]
name = "matplotlib-pgfutils"
description = "Utilities for generating PGF figures from Matplotlib"
dynamic = ["version"]
readme = {file = "README.md", content-type="text/markdown"}
license = {text = "BSD-3-Clause"}
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.7.0"
]

[project.urls]
Documentation = "https://matplotlib-pgfutils.readthedocs.io/"
Repository = "https://github.com/bcbnz/matplotlib-pgfutils/"
Issues = "https://github.com/bcbnz/matplotlib-pgfutils/issues"

[project.optional-dependencies]
dev = [
  "matplotlib-pgfutils[doc]",
  "matplotlib-pgfutils[test]",
  "reuse",
  "ruff",
]
doc = [
  "mkdocs",
]
test = [
  "pytest",
  "pytest-cov",
]


#
# Build tools.
#

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["pgfutils"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"


#
# Linting.
#

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "NPY",  # NumPy-specific checks
  "W",    # pycodestyle warnings
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"data/**.py" = ["E402"]
"tests/**.py" = ["E402"]


#
# Testing
#

[tool.pytest.ini_options]
addopts = "-v --cov=pgfutils --cov-report html --cov-report term --cov-branch"
filterwarnings = [
    "ignore:The distutils package is deprecated",
    "ignore:numpy.ndarray size changed"
]
